error handler and user,video model

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
 PORT=Your PORT
+ 
+MONGO_URL=your mongodburl
+
+CLOUDINARY_CLOUD_NAME=cloud name
+CLOUDINARY_API_KEY=cloud api key
+CLOUDINARY_API_SECRET=cloud api secret
+
+ACCESSTOKEN_KEY= your access token key 
+ACCESSTOKEN_EXPIRE=1d
+
+REFRESSTOKEN_KEY= your refresh token key
+REFRESSTOKEN_EXPIRE=3d
